@@ -7,7 +7,7 @@ import java.util.List;
 import java.util.Random;
 
 public class UserTestData {
-    private static final List<String> EXAMPLE_HANDLES = Arrays.asList("aaa", "bbb",
+    private static final List<String> EXAMPLE_HANDLES = List.of("aaa", "bbb",
             "ccc", "ddd", "eee", "fff", "gee", "ggg", "hhh", "iii", "jjj",
             "kkk", "lll", "mmm", "nnn", "ooo", "ppp", "qqq", "rrr", "sss",
             "ttt", "uuu", "vvv", "www", "xxx", "yyy", "zzz");
